--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="luxury">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Savorly.png" />
+    <link rel="icon" type="image/svg+xml" href="/RecipeHub.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Savorly</title>
+    <title>RecipeHub</title>
   </head>
   <body>
     <div id="root"></div>
